# claude-mountaineering-skills

./: .gitignore  .releaserc.json  CHANGELOG.md  CONTRIBUTING.md  README.md  package.json
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: release.yml
agents/: conditions-gatherer.md  peak-finder.md  peak-validator.md  report-generator.md  report-synthesizer.md  route-info-gatherer.md  route-researcher.md  trip-report-collector.md
commands/: beta.md  conditions.md
docs/plans/: 2025-10-20-route-researcher-design.md  2025-10-20-route-researcher-implementation.md
skills/route-researcher/: README.md  SKILL-legacy.md  SKILL.md
skills/route-researcher/agents/: conditions-researcher.md  report-reviewer.md  report-writer.md  route-researcher.md
skills/route-researcher/assets/: report-template.md
skills/route-researcher/examples/: 2025-10-23-mount-si.md  2025-11-06-mount-adams.md  2025-11-06-wolf-peak.md
skills/route-researcher/schemas/: conditions-data.json  peak-data.json  route-data.json  trip-reports-data.json
skills/route-researcher/templates/: conditions-only.md
skills/route-researcher/tools/: README.md  cache.py  calculate_daylight.py  cloudscrape.py  fetch_avalanche.py  fetch_weather.py  pyproject.toml  test_calculate_daylight.py  test_fetch_avalanche.py  test_fetch_weather.py
